log
Wed, May 14, 2025  9:29:57 PM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Wed, May 14, 2025  9:38:59 PM: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:55:21: error: variable 'col' set but not used [-Werror=unused-but-set-variable]
     int fila = -1 , col = -1;
                     ^~~
sudoku.c:55:9: error: variable 'fila' set but not used [-Werror=unused-but-set-variable]
     int fila = -1 , col = -1;
         ^~~~
cc1.exe: all warnings being treated as errors
f6463c6
Wed, May 14, 2025  9:47:13 PM: 
 sudoku.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:71:13: error: implicit declaration of function 'insert' [-Werror=implicit-function-declaration]
             insert(list, new);
             ^~~~~~
cc1.exe: all warnings being treated as errors
f66235f
Wed, May 14, 2025  9:47:54 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
450bc4e
Wed, May 14, 2025 10:04:07 PM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
5a4358d
Wed, May 14, 2025 10:10:10 PM: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
f0c6777
